<resources>

    <string name="app_name">Small TicTacToe</string>
    <string name="playerX">X</string>
    <string name="playerO">O</string>
    <string name="def_content">-</string>
    <string name="restart">Do you want to restart now to apply changes?</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="draw">Draw!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="change_theme">Change theme</string>
    <string name="press_back_again_to_exit">Press \'Back\' again to exit</string>
    <string name="Owins">O wins!</string>
    <string name="Xwins">X wins!</string>
    <string name="game_lost">Current game will be lost, are you sure?</string>
    <string name="two_players_mode">2 Players Mode</string>
    <string name="choose_your_side">Choose your side</string>
    <string name="zero">0</string>

</resources>
