<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingTop="10dp"
    android:paddingRight="5dp">

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:text="@string/restart"
        android:id="@+id/alert"
        android:textColor="@color/md_black_1000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@id/alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/accept"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>

    </LinearLayout>

</RelativeLayout>